--- a/index.html
+++ b/index.html
@@ -1,7 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
 	<head>
-	<body>test
-	</body>
+	<meta charset="utf-8" />
+	<title>Homer's Online Music Shop</title>
 	</head>
+	<body>
+		<header>
+			<hgroup>
+				<h1>Homer's Music Store</h1>
+				<h2>Rock On!</h2>
+			</hgroup>
+		</header>
+		<section id="container">
+			<h1>Everything Is On Sale for Halloween</h1>
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ante ligula, 
+			ultricies eget mattis eu, faucibus nec nisl. Ut accumsan interdum commodo. 
+			Suspendisse sit amet tortor ante, quis vulputate felis. Morbi pharetra ornare mattis. 
+			Morbi quis blandit risus. Integer convallis lorem et felis porttitor blandit. 
+			Proin vel molestie velit. Vivamus id justo a mi faucibus pretium et sit amet mauris. 
+			Praesent aliquet velit et ligula feugiat consequat. Praesent vulputate ornare elit eu aliquam.</p>
+			<h3>My Guarantee</h3>
+			<p>If you aren't completely satisfied with everything you buy from my site, you can return it for
+			a full refund.</p>
+			<strong>No questions asked!</strong>
+		</section>
+		<footer>
+			<p>&copy; 2012 Homer J. Simpson</p>
+		</footer>
+	</body>
 </html>
