add link commit

--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
 				<h1>Homer's Music Store</h1>
 				<h2>Rock On!</h2>
 			</hgroup>
+			<nav>
+				<a href="multi_column.html">Layout</a>
+				<a href="table.html">Tables</a>
+				<a href="images">Graphics</a>
+				<a href="video">Multimedia</a>
+				<a href="static_form.html">Forms</a>
+				<a href="product.php">Products</a>
+				<a href="geolocation.html">Stuff</a>
+			</nav>
 		</header>
 		<section id="container">
 			<h1>Everything Is On Sale for Halloween</h1>
