--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 	<head>
 	<meta charset="utf-8" />
 	<title>Homer's Online Music Shop</title>
+	<link rel="stylesheet" href="css/main.css">
+	<link rel="shortcut icon" href="images/homer.ico" />
 	</head>
 	<body>
 		<header>
+		<img src="images/Homer_Rock_and_Roll.jpg" alt="Homer" width="100" height="100">
 			<hgroup>
 				<h1>Homer's Music Store</h1>
 				<h2>Rock On!</h2>
@@ -21,7 +24,7 @@
 			</nav>
 		</header>
 		<section id="container">
-			<h1>Everything Is On Sale for Halloween</h1>
+			<h1 id="top">Everything Is On Sale for Halloween</h1>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ante ligula, 
 			ultricies eget mattis eu, faucibus nec nisl. Ut accumsan interdum commodo. 
 			Suspendisse sit amet tortor ante, quis vulputate felis. Morbi pharetra ornare mattis. 
