--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 	<meta charset="utf-8" />
 	<title>Homer's Online Music Shop</title>
 	<link rel="stylesheet" href="css/main.css">
+	<link rel="stylesheet" href="css/nav.css">
 	<link rel="shortcut icon" href="images/homer.ico" />
 	</head>
 	<body>
@@ -14,28 +15,36 @@
 				<h2>Rock On!</h2>
 			</hgroup>
 			<nav>
-				<a href="multi_column.html">Layout</a>
-				<a href="table.html">Tables</a>
-				<a href="images">Graphics</a>
-				<a href="video">Multimedia</a>
-				<a href="static_form.html">Forms</a>
-				<a href="product.php">Products</a>
-				<a href="geolocation.html">Stuff</a>
+				<ul id="main">
+					<li><a href="index.html">Home</a></li>
+					<li><a href="multi_column.html">Layout</a></li>
+					<li><a href="table.html">Tables</a></li>
+					<li><a href="images">Graphics</a></li>
+					<li><a href="video">Multimedia</a></li>
+					<li><a href="email_form.html">Forms</a></li>
+					<li><a href="product.php">Products</a></li>
+					<li><a href="geolocation.html">Stuff</a></li>
+				</ul>
 			</nav>
 		</header>
+		<article>
+		<h2>Home Page</h2>
 		<section id="container">
-			<h1 id="top">Everything Is On Sale for Halloween</h1>
+		<header id="top">
+			<h1>Everything Is On Sale for Halloween</h1>
+		</header>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ante ligula, 
 			ultricies eget mattis eu, faucibus nec nisl. Ut accumsan interdum commodo. 
 			Suspendisse sit amet tortor ante, quis vulputate felis. Morbi pharetra ornare mattis. 
 			Morbi quis blandit risus. Integer convallis lorem et felis porttitor blandit. 
 			Proin vel molestie velit. Vivamus id justo a mi faucibus pretium et sit amet mauris. 
 			Praesent aliquet velit et ligula feugiat consequat. Praesent vulputate ornare elit eu aliquam.</p>
-			<h3>My Guarantee</h3>
+			<h2>My Guarantee</h2>
 			<p>If you aren't completely satisfied with everything you buy from my site, you can return it for
 			a full refund.</p>
 			<strong>No questions asked!</strong>
 		</section>
+		</article>
 		<footer>
 			<p>&copy; 2012 Homer J. Simpson</p>
 		</footer>
