--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
 				<ul id="main">
 					<li><a href="index.html">Home</a></li>
 					<li><a href="multi_column.html">Layout</a></li>
+						<ul>
+						<li><a href="two_column_left.html">2 Column Float Left</a></li>
+						<li><a href="two_column_right.html">2 Column Float Right</a></li>
+						<li><a href="three_column.html">3 Column Float</a></li>
+						</ul>
 					<li><a href="table.html">Tables</a></li>
 					<li><a href="images">Graphics</a></li>
 					<li><a href="video">Multimedia</a></li>
@@ -27,23 +32,23 @@
 				</ul>
 			</nav>
 		</header>
-		<article>
-		<h2>Home Page</h2>
-		<section id="container">
-		<header id="top">
-			<h1>Everything Is On Sale for Halloween</h1>
-		</header>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ante ligula, 
-			ultricies eget mattis eu, faucibus nec nisl. Ut accumsan interdum commodo. 
-			Suspendisse sit amet tortor ante, quis vulputate felis. Morbi pharetra ornare mattis. 
-			Morbi quis blandit risus. Integer convallis lorem et felis porttitor blandit. 
-			Proin vel molestie velit. Vivamus id justo a mi faucibus pretium et sit amet mauris. 
-			Praesent aliquet velit et ligula feugiat consequat. Praesent vulputate ornare elit eu aliquam.</p>
-			<h2>My Guarantee</h2>
-			<p>If you aren't completely satisfied with everything you buy from my site, you can return it for
-			a full refund.</p>
-			<strong>No questions asked!</strong>
-		</section>
+		<article>	
+				<section id="container">
+					<header id="top">
+						<h1>Everything Is On Sale for Halloween</h1>
+					</header>
+					<h2>Home Page</h2>
+					<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam ante ligula, 
+					ultricies eget mattis eu, faucibus nec nisl. Ut accumsan interdum commodo. 
+					Suspendisse sit amet tortor ante, quis vulputate felis. Morbi pharetra ornare mattis. 
+					Morbi quis blandit risus. Integer convallis lorem et felis porttitor blandit. 
+					Proin vel molestie velit. Vivamus id justo a mi faucibus pretium et sit amet mauris. 
+					Praesent aliquet velit et ligula feugiat consequat. Praesent vulputate ornare elit eu aliquam.</p>
+					<h2>My Guarantee</h2>
+					<p>If you aren't completely satisfied with everything you buy from my site, you can return it for
+					a full refund.</p>
+					<strong>No questions asked!</strong>
+				</section>
 		</article>
 		<footer>
 			<p>&copy; 2012 Homer J. Simpson</p>
