Update prod discount commit

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 					<li><a href="table.html">Tables</a></li>
 					<li><a href="images">Graphics</a></li>
 					<li><a href="video">Multimedia</a></li>
-					<li><a href="email_form.html">Forms</a></li>
+					<li><a href="product_discount.html">Forms</a></li>
 					<li><a href="product.php">Products</a></li>
 					<li><a href="geolocation.html">Stuff</a></li>
 				</ul>
