--- a/product_discount.html
+++ b/product_discount.html
@@ -61,8 +61,8 @@
 			</nav>
 		</header>
 		<article>
-			<h2>Home Page</h2>
 				<section id="container">
+				<h2>Product Discount Page</h2>
 					<header id="top">
 						<h1>Everything Is On Sale for Halloween</h1>
 					</header>
