--- a/two_column_left.html
+++ b/two_column_left.html
@@ -25,7 +25,7 @@
 			left: -160px;
 			overflow: hidden;
 			}
-		#container_blue {     
+		#container_blue {     /*no change in position, sits behind green*/
 			clear: left;
 			float: left;
 			width: 100%;
@@ -107,8 +107,8 @@
 						dolor sit amet, consectetuer adipiscing elit, sed diam nonummy nibh 
 						euismod tincidunt ut laoreet dolore magna aliquam erat volutpat.</p>
 				</article>
-			</div> 	<!--Close #container_inner (blue) div  -->
-		</div>		<!--Close #container_outer (green) div  -->
+			</div> 	<!--Close #container_green (inner) div  -->
+		</div>		<!--Close #container_blue (outer) div  -->
 		<footer>
 			<p>&copy; 2012 Homer J. Simpson</p>
 		</footer>
